adds site results css

--- a/index.html
+++ b/index.html
@@ -45,67 +45,90 @@
     </header>
 
     <nav>
-      <a>All</a>
-      <a>News</a>
-      <a>Maps</a>
-      <a>Videos</a>
-      <a>Shopping</a>
-      <a>More</a>
-      <a>Settings</a>
-      <a>Tools</a>
+      <div class="left-nav">
+        <a>All</a>
+        <a>News</a>
+        <a>Maps</a>
+        <a>Videos</a>
+        <a>Shopping</a>
+        <a>More</a>
+      </div>
+
+      <div class="right-nav">
+        <a>Settings</a>
+        <a>Tools</a>
+      </div>
     </nav>
-    <div>
+    <hr />
+    <div class="result-time">
       <p>About 108,000,000 results (0.64 seconds)</p>
     </div>
     <div>
-      <p>Ad - www.wix.com/</p>
-      <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
-      <p>
-        Just Choose the Template You Love & Customize It. No Design Code Skills
-        Needed. 24/7 support center. SEO wizard. Top industry hosting. Market
-        leaders. 100s of templates. Customizable online store. Customizable
-        templates. 1000s of free images.
-      </p>
-      <p>victor-lf.github.io > google-search-results</p>
-      <a href="#">build this webpage - GitHub Pages</a>
-      <p>
-        build this webpage. https://benjdelt.github.io/google-results/. With
-        zero coding experience, artist building 180 webpages in 180 days ...
-      </p>
-      <p>christine-27.github.io › google-homepage</p>
-      <a href="#">build this webpage - GitHub Pages</a>
-      <p>
-        TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK
-        INSTALLATION: 1. Log in to your hosting account. 2. Go to your ...
-      </p>
+      <div class="sites">
+        <div>
+          <p>Ad - www.wix.com/</p>
+          <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
+          <p>
+            Just Choose the Template You Love & Customize It. No Design Code
+            Skills Needed. 24/7 support center. SEO wizard. Top industry
+            hosting. Market leaders. 100s of templates. Customizable online
+            store. Customizable templates. 1000s of free images.
+          </p>
+        </div>
+        <div>
+          <p>victor-lf.github.io > google-search-results</p>
+          <a href="#">build this webpage - GitHub Pages</a>
+          <p>
+            build this webpage. https://benjdelt.github.io/google-results/. With
+            zero coding experience, artist building 180 webpages in 180 days ...
+          </p>
+        </div>
+        <div>
+          <p>christine-27.github.io › google-homepage</p>
+          <a href="#">build this webpage - GitHub Pages</a>
+          <p>
+            TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE
+            CLICK INSTALLATION: 1. Log in to your hosting account. 2. Go to your
+            ...
+          </p>
+        </div>
 
-      <h2>Videos</h2>
-      <div style="border-radius: 25px; border: solid;">
-        <img
-          style="width: 212px; height: auto;"
-          src="http://img.youtube.com/vi/YWA-xbsJrVg/maxresdefault.jpg"
-          alt=""
-        />
-        <h3>How to Make a Website in 10 mins - Simple & Easy</h3>
-        <p>Website Learners</p>
-        <p>YouTube - Jan 3, 2018</p>
+        <h2>Videos</h2>
+        <div class="videos">
+          <div style="border-radius: 10px; border: solid 1px;">
+            <img
+              style="width: 212px; height: auto; border-radius: 10px;"
+              src="http://img.youtube.com/vi/YWA-xbsJrVg/maxresdefault.jpg"
+              alt=""
+            />
+            <h3>How to Make a Website in 10 mins - Simple & Easy</h3>
+            <p>Website Learners</p>
+            <p>YouTube - Jan 3, 2018</p>
+          </div>
+          <div>
+            <img
+              style="width: 212px; height: auto;"
+              src="http://img.youtube.com/vi/l3mUE6qj2Qg/maxresdefault.jpg"
+              alt=""
+            />
+            <h3>
+              How To Build a Website Without Code | Everyone Can Build a ...
+            </h3>
+            <p>Roberto Blake</p>
+            <p>YouTube - Nov 7, 2016</p>
+          </div>
+          <div>
+            <img
+              style="width: 212px; height: auto;"
+              src="http://img.youtube.com/vi/RZ-Oe4_Ew7g/maxresdefault.jpg"
+              alt=""
+            />
+            <h3>Learn How To Build A Website in 1 Hour!</h3>
+            <p>Web Dev Simplified</p>
+            <p>YouTube - Mar 9, 2019</p>
+          </div>
+        </div>
       </div>
-      <img
-        style="width: 212px; height: auto;"
-        src="http://img.youtube.com/vi/l3mUE6qj2Qg/maxresdefault.jpg"
-        alt=""
-      />
-      <h3>How To Build a Website Without Code | Everyone Can Build a ...</h3>
-      <p>Roberto Blake</p>
-      <p>YouTube - Nov 7, 2016</p>
-      <img
-        style="width: 212px; height: auto;"
-        src="http://img.youtube.com/vi/RZ-Oe4_Ew7g/maxresdefault.jpg"
-        alt=""
-      />
-      <h3>Learn How To Build A Website in 1 Hour!</h3>
-      <p>Web Dev Simplified</p>
-      <p>YouTube - Mar 9, 2019</p>
     </div>
   </body>
 </html>
