adds related searches

--- a/index.html
+++ b/index.html
@@ -63,88 +63,106 @@
     <div class="result-time">
       <p>About 108,000,000 results (0.64 seconds)</p>
     </div>
-    <div>
-      <div class="sites">
-        <div>
-          <p>Ad - www.wix.com/</p>
-          <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
-          <p>
-            Just Choose the Template You Love & Customize It. No Design Code
-            Skills Needed. 24/7 support center. SEO wizard. Top industry
-            hosting. Market leaders. 100s of templates. Customizable online
-            store. Customizable templates. 1000s of free images.
-          </p>
-        </div>
-        <div>
-          <p>victor-lf.github.io > google-search-results</p>
-          <a href="#">build this webpage - GitHub Pages</a>
-          <p>
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
-          </p>
-        </div>
-        <div>
-          <p>christine-27.github.io › google-homepage</p>
-          <a href="#">build this webpage - GitHub Pages</a>
-          <p>
-            TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE
-            CLICK INSTALLATION: 1. Log in to your hosting account. 2. Go to your
-            ...
-          </p>
-        </div>
 
-        <h2>Videos</h2>
-        <div class="videos">
-          <div class="vid-1" style="border-radius: 10px; border: solid 1px;">
-            <img
-              style="width: 212px; height: auto; border-radius: 10px;"
-              src="http://img.youtube.com/vi/YWA-xbsJrVg/maxresdefault.jpg"
-              alt=""
-            />
-            <a href="#">How to Make a Website in 10 mins - Simple & Easy</a>
-            <p>Website Learners</p>
-            <p>YouTube - Jan 3, 2018</p>
-          </div>
-          <div class="vid-2" style="border-radius: 10px; border: solid 1px;">
-            <img
-              style="width: 212px; height: auto; border-radius: 10px;"
-              src="http://img.youtube.com/vi/l3mUE6qj2Qg/maxresdefault.jpg"
-              alt=""
-            />
-            <a href="#">
-              How To Build a Website Without Code | Everyone Can Build a ...
-            </a>
-            <p>Roberto Blake</p>
-            <p>YouTube - Nov 7, 2016</p>
-          </div>
-        </div>
+    <div class="sites">
+      <div>
+        <p>Ad - www.wix.com/</p>
+        <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
+        <p>
+          Just Choose the Template You Love & Customize It. No Design Code
+          Skills Needed. 24/7 support center. SEO wizard. Top industry hosting.
+          Market leaders. 100s of templates. Customizable online store.
+          Customizable templates. 1000s of free images.
+        </p>
+      </div>
+      <div>
+        <p>victor-lf.github.io > google-search-results</p>
+        <a href="#">build this webpage - GitHub Pages</a>
+        <p>
+          build this webpage. https://benjdelt.github.io/google-results/. With
+          zero coding experience, artist building 180 webpages in 180 days ...
+        </p>
+      </div>
+      <div>
+        <p>christine-27.github.io › google-homepage</p>
+        <a href="#">build this webpage - GitHub Pages</a>
+        <p>
+          TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK
+          INSTALLATION: 1. Log in to your hosting account. 2. Go to your ...
+        </p>
+      </div>
 
-        <div>
-          <p>Ad - www.wix.com/</p>
-          <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
-          <p>
-            Just Choose the Template You Love & Customize It. No Design Code
-            Skills Needed. 24/7 support center. SEO wizard. Top industry
-            hosting. Market leaders. 100s of templates. Customizable online
-            store. Customizable templates. 1000s of free images.
-          </p>
+      <h3>Videos</h3>
+      <div class="videos">
+        <div class="vid-1" style="border-radius: 10px; border: solid 1px;">
+          <img
+            style="width: 212px; height: auto; border-radius: 10px;"
+            src="http://img.youtube.com/vi/YWA-xbsJrVg/maxresdefault.jpg"
+            alt=""
+          />
+          <a href="#">How to Make a Website in 10 mins - Simple & Easy</a>
+          <p>Website Learners</p>
+          <p>YouTube - Jan 3, 2018</p>
         </div>
-        <div>
-          <p>victor-lf.github.io > google-search-results</p>
-          <a href="#">build this webpage - GitHub Pages</a>
-          <p>
-            build this webpage. https://benjdelt.github.io/google-results/. With
-            zero coding experience, artist building 180 webpages in 180 days ...
-          </p>
+        <div class="vid-2" style="border-radius: 10px; border: solid 1px;">
+          <img
+            style="width: 212px; height: auto; border-radius: 10px;"
+            src="http://img.youtube.com/vi/l3mUE6qj2Qg/maxresdefault.jpg"
+            alt=""
+          />
+          <a href="#">
+            How To Build a Website Without Code | Everyone Can Build a ...
+          </a>
+          <p>Roberto Blake</p>
+          <p>YouTube - Nov 7, 2016</p>
         </div>
-        <div>
-          <p>christine-27.github.io › google-homepage</p>
-          <a href="#">build this webpage - GitHub Pages</a>
-          <p>
-            TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE
-            CLICK INSTALLATION: 1. Log in to your hosting account. 2. Go to your
-            ...
-          </p>
+      </div>
+
+      <div>
+        <p>Ad - www.wix.com/</p>
+        <a href="#">How To Build Your Own Website - It's Easy with Wix.com</a>
+        <p>
+          Just Choose the Template You Love & Customize It. No Design Code
+          Skills Needed. 24/7 support center. SEO wizard. Top industry hosting.
+          Market leaders. 100s of templates. Customizable online store.
+          Customizable templates. 1000s of free images.
+        </p>
+      </div>
+      <div>
+        <p>victor-lf.github.io > google-search-results</p>
+        <a href="#">build this webpage - GitHub Pages</a>
+        <p>
+          build this webpage. https://benjdelt.github.io/google-results/. With
+          zero coding experience, artist building 180 webpages in 180 days ...
+        </p>
+      </div>
+      <div>
+        <p>christine-27.github.io › google-homepage</p>
+        <a href="#">build this webpage - GitHub Pages</a>
+        <p>
+          TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE CLICK
+          INSTALLATION: 1. Log in to your hosting account. 2. Go to your ...
+        </p>
+      </div>
+    </div>
+    <div class="related-searches">
+      <h3>Related searches</h3>
+      <div class="related-container">
+        <div class="rel-1">
+          <i class="icons fas fa-search"></i>
+          <a href="#">build a website in a day</a>
+        </div>
+        <div class="rel-2">
+          <i class="icons fas fa-search"></i>
+          <a href="#">how to create a website on google</a>
+        </div>
+        <div class="rel-3">
+          <i class="icons fas fa-search"></i>
+          <a href="#">how to create a website pdf</a>
+        </div>
+        <div class="rel-4">
+          <i class="icons fas fa-search"></i>
+          <a href="#">create professional website</a>
         </div>
       </div>
     </div>
